# custom-xtoys-devices

./: LICENSE  README.md  pyproject.toml
gsrsensor/: README.md
gsrsensor/src/: main.cpp
motorController/: README.md
motorController/src/: main.cpp
relayController/: README.md
relayController/src/: main.cpp
servoController/: README.md  platformio.ini
servoController/src/: main.cpp
